this is version 2

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <nav>
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#music">Music</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li style="float:right; "><a class="active" style="color:aqua;">Dimitri Law</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="musictv.html">Music TV</a></li>
+        <li><a href="charts.html">Charts</a></li>
+        <li style="float:right; "><a class="active" style="color:aqua;">Music Television</a></li>
       </ul>
 
     </nav>
@@ -29,13 +29,13 @@
           <img class="mySlides2" src="image/tv3.png" style="width:100%">
         
           <div class="w3-row-padding w3-section">
-            <div class="w3-col s4">
+            <div class="w3-col s41">
               <img class="demo w3-opacity w3-hover-opacity-off" src="image/tv1.png" style="width:100%" onclick="currentDiv(1)">
             </div>
-            <div class="w3-col s4">
+            <div class="w3-col s41">
               <img class="demo w3-opacity w3-hover-opacity-off" src="image/tv2.png" style="width:100%" onclick="currentDiv(2)">
             </div>
-            <div class="w3-col s4">
+            <div class="w3-col s41">
                     <img class="demo w3-opacity w3-hover-opacity-off" src="image/tv3.png" style="width:100%" onclick="currentDiv(3)">
                   </div>
             
@@ -43,7 +43,7 @@
         </div>
 
         <footer>
-                <div class="col-6 social foot "> 
+                <div class="col-6 social foot " style="width:95%;"> 
                     <div class="center"><p>Follow us on social media!</p></div>
                         <ul class="imgcenter">
                         <li><a href="http://facebook.com">
